--- a/_kanji/0051.md
+++ b/_kanji/0051.md
@@ -23,13 +23,13 @@ compound_words:
       en: in front (of)
       es: frente (a)
   - word: 三日前
-    kana: みっかまえ
+    kana: みっ・か・まえ
     translations:
     - ca: fa tres dies
       en: three days ago
       es: hace tres días
   - word: 前半
-    kana: ぜんはん
+    kana: ぜん・はん
     translations:
     - ca: la primera meitat
       en: the first half
