--- a/_kanji/0052.md
+++ b/_kanji/0052.md
@@ -23,19 +23,19 @@ compound_words:
       en: after; later
       es: después; luego
   - word: 後ろ
-    kana: うしろ
+    kana: うし・ろ
     translations:
     - ca: darrere
       en: back; behind
       es: detrás
   - word: 前後
-    kana: ぜんご
+    kana: ぜん・ご
     translations:
     - ca: endavant i enrere
       en: back and forth
       es: adelante y atrás
   - word: 最後
-    kana: さいご
+    kana: さい・ご
     translations:
     - ca: l'últim
       en: the last
