--- a/_kanji/0053.md
+++ b/_kanji/0053.md
@@ -23,7 +23,7 @@ compound_words:
       en: outside
       es: fuera
   - word: 外国
-    kana: がいこく
+    kana: がい・こく
     translations:
     - ca: països estrangers
       en: foreign country
