--- a/_kanji/0054.md
+++ b/_kanji/0054.md
@@ -23,13 +23,13 @@ compound_words:
       en: left
       es: izquierdo, da
   - word: 左手
-    kana: ひだりて
+    kana: ひだり・て
     translations:
     - ca: mà esquerra
       en: lefthand
       es: mano izquierda
   - word: 左側
-    kana: ひだりがわ
+    kana: ひだり・がわ
     translations:
     - ca: costat esquerre
       en: left side
