--- a/_kanji/0055.md
+++ b/_kanji/0055.md
@@ -23,19 +23,19 @@ compound_words:
       en: right
       es: derecho, cha
   - word: 右手
-    kana: みぎて
+    kana: みぎ・て
     translations:
     - ca: mà dreta
       en: righthand
       es: mano derecha
   - word: 左右
-    kana: さゆう
+    kana: さ・ゆう
     translations:
     - ca: esquerra i dreta
       en: left and right
       es: izquierda y derecha
   - word: 右側
-    kana: みぎがわ
+    kana: みぎ・がわ
     translations:
     - ca: costat dret
       en: right side
