--- a/_kanji/0057.md
+++ b/_kanji/0057.md
@@ -23,19 +23,19 @@ compound_words:
       en: west
       es: oeste
   - word: 西口
-    kana: にしぐち
+    kana: にし・ぐち
     translations:
     - ca: l'entrada oest
       en: the west gate
       es: la entrada oeste
   - word: 東西
-    kana: とうざい
+    kana: とう・ざい
     translations:
     - ca: est i oest
       en: east and west
       es: este y oeste
   - word: 西洋
-    kana: せいよう
+    kana: せい・よう
     translations:
     - ca: l'Occident
       en: the West
