--- a/_kanji/0058.md
+++ b/_kanji/0058.md
@@ -23,19 +23,19 @@ compound_words:
       en: south
       es: sur
   - word: 南口
-    kana: みなみぐち
+    kana: みなみ・ぐち
     translations:
     - ca: l'entrada sud
       en: the south gate
       es: la entrada sud
   - word: 東南アジア
-    kana: とうなんアシア
+    kana: とう・なん・アシア
     translations:
     - ca: L'Àsia Sud-oriental
       en: Southeast Asia
       es: Sudeste Asiático
   - word: 南極
-    kana: なんきょく
+    kana: なん・きょく
     translations:
     - ca: Pol sud
       en: South Pole
