--- a/_kanji/0059.md
+++ b/_kanji/0059.md
@@ -23,19 +23,19 @@ compound_words:
       en: north
       es: norte
   - word: 北口
-    kana: きたぐち
+    kana: きた・ぐち
     translations:
     - ca: l'entrada nord
       en: the north gate
       es: la entrada norte
   - word: 南北
-    kana: なんぼく
+    kana: なん・ぼく
     translations:
     - ca: nord i sud
       en: north and south
       es: norte y sur
   - word: 北海道
-    kana: ほっかいどう
+    kana: ほっ・かい・どう
     translations:
     - ca: Hokkaido
       en: Hokkaido
