--- a/_kanji/0060.md
+++ b/_kanji/0060.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 名前
-    kana: なまえ
+    kana: な・まえ
     translations:
     - ca: nom
       en: name
       es: nombre
   - word: 十名
-    kana: じゅうめい
+    kana: じゅう・めい
     translations:
     - ca: deu persones
       en: 10 people
       es: diez personas
   - word: 有名
-    kana: ゆうめい
+    kana: ゆう・めい
     translations:
     - ca: famós -osa
       en: famous
       es: famoso, sa
   - word: 人名
-    kana: じんめい
+    kana: じん・めい
     translations:
     - ca: el nom d'una persona
       en: a person's name
