--- a/_kanji/0061.md
+++ b/_kanji/0061.md
@@ -23,7 +23,7 @@ compound_words:
       en: cow
       es: vaca
   - word: 水牛
-    kana: すいぎゅう
+    kana: すい・ぎゅう
     translations:
     - ca: búfal aquàtic
       en: buffalo
