--- a/_kanji/0201.md
+++ b/_kanji/0201.md
@@ -29,13 +29,13 @@ compound_words:
       en: this morning
       es: esta mañana
   - word: 朝日
-    kana: あさひ
+    kana: あさ・ひ
     translations:
     - ca: alba
       en: the morning sun
       es: amanecer
   - word: 朝食
-    kana: ちょうしょく
+    kana: ちょう・しょく
     translations:
     - ca: esmorzar
       en: breakfast
