--- a/_kanji/0202.md
+++ b/_kanji/0202.md
@@ -23,19 +23,19 @@ compound_words:
       en: noon
       es: mediodía
   - word: 昼休み
-    kana: ひるやすみ
+    kana: ひる・やす・み
     translations:
     - ca: pausa per esmorzar
       en: lunch break
       es: pausa para almorzar
   - word: 昼ご飯
-    kana: ひるごはん
+    kana: ひる・ご・はん
     translations:
     - ca: dinar
       en: lunch
       es: almuerzo
   - word: 昼食
-    kana: ちゅうしょく
+    kana: ちゅう・しょく
     translations:
     - ca: dinar
       en: lunch
