--- a/_kanji/0203.md
+++ b/_kanji/0203.md
@@ -23,19 +23,19 @@ compound_words:
       en: night
       es: noche
   - word: 今夜
-    kana: こんや
+    kana: こん・や
     translations:
     - ca: aquesta nit
       en: tonight
       es: esta noche
   - word: 夜店
-    kana: よみせ
+    kana: よ・みせ
     translations:
     - ca: botiga de nit
       en: night stall
       es: tienda de noche
   - word: 夜食
-    kana: やしょく
+    kana: や・しょく
     translations:
     - ca: berenar de mitjanit
       en: bedtime snack
