--- a/_kanji/0204.md
+++ b/_kanji/0204.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 夕日
-    kana: ゆうひ
+    kana: ゆう・ひ
     translations:
     - ca: capvespre
       en: sunset
       es: puesta de sol
   - word: 夕食
-    kana: ゆうしょく
+    kana: ゆう・しょく
     translations:
     - ca: sopar
       en: supper
