--- a/_kanji/0205.md
+++ b/_kanji/0205.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 読み方
-    kana: よみかた
+    kana: よ・み・かた
     translations:
     - ca: com llegir
       en: how to read
       es: cómo leer
   - word: 夕方
-    kana: ゆうがた
+    kana: ゆう・がた
     translations:
     - ca: vespre
       en: evening
       es: noche
   - word: あの方
-    kana: あのかた
+    kana: あの・かた
     translations:
     - ca: aquesta persona
       en: that person
       es: esta persona
   - word: 方法
-    kana: ほうほう
+    kana: ほう・ほう
     translations:
     - ca: mètode
       en: method
