--- a/_kanji/0206.md
+++ b/_kanji/0206.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 今晩
-    kana: こんばん
+    kana: こん・ばん
     translations:
     - ca: aquesta nit
       en: tonight
       es: esta noche
   - word: 毎晩
-    kana: まいばん
+    kana: まい・ばん
     translations:
     - ca: cada nit
       en: every night
       es: cada noche
   - word: 晩ご飯
-    kana: ばんごはん
+    kana: ばん・ご・はん
     translations:
     - ca: sopar
       en: dinner
