--- a/_kanji/0207.md
+++ b/_kanji/0207.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 時計
-    kana: とけい
+    kana: と・けい
     translations:
     - ca: rellotge
       en: watch; clock
       es: reloj
   - word: 計画
-    kana: けいかく
+    kana: けい・かく
     translations:
     - ca: pla
       en: plan
       es: plan
   - word: 計る
-    kana: はかる
+    kana: はか・る
     translations:
     - ca: mesurar
       en: to measure
       es: medir
   - word: 合計
-    kana: ごうけい
+    kana: ごう・けい
     translations:
     - ca: (quantitat) total
       en: total (amount)
