--- a/_kanji/0208.md
+++ b/_kanji/0208.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 日曜日
-    kana: にちようび
+    kana: にち・よう・び
     translations:
     - ca: diumenge
       en: Sunday
       es: domingo
   - word: 水曜日
-    kana: すいようび
+    kana: すい・よう・び
     translations:
     - ca: dimecres
       en: Wednesday
       es: miércoles
   - word: 何曜日
-    kana: なんようび
+    kana: なん・よう・び
     translations:
     - ca: quin dia (de la setmana)
       en: what day (of the week)
