--- a/_kanji/0209.md
+++ b/_kanji/0209.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 以上
-    kana: いじょう
+    kana: い・じょう
     translations:
     - ca: més que
       en: more than
       es: más que
   - word: 以下
-    kana: いか
+    kana: い・か
     translations:
     - ca: menys que
       en: less than
       es: menos que
   - word: 以外
-    kana: いがい
+    kana: い・がい
     translations:
     - ca: a part de
       en: except
       es: a parte de
   - word: 以前
-    kana: いぜん
+    kana: い・ぜん
     translations:
     - ca: abans
       en: previously
