--- a/_kanji/0210.md
+++ b/_kanji/0210.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 一度
-    kana: いちど
+    kana: いち・ど
     translations:
     - ca: una vegada
       en: once
       es: una vez
   - word: 今度
-    kana: こんど
+    kana: こん・ど
     translations:
     - ca: la propera vegada; aquesta vegada
       en: next time; this time
       es: la próxima vez; esta vez
   - word: ２５度
-    kana: にじゅうごど
+    kana: にじゅうご・ど
     translations:
     - ca: 25 graus
       en: 25 degress
       es: 25 grados
   - word: 温度
-    kana: おんど
+    kana: おん・ど
     translations:
     - ca: temperatura
       en: temperature
