--- a/_kanji/0211.md
+++ b/_kanji/0211.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 止まる
-    kana: とまる
+    kana: と・まる
     translations:
     - ca: aturar
       en: to stop
       es: detener
   - word: 中止する
-    kana: ちゅうしする
+    kana: ちゅう・し・する
     translations:
     - ca: cancel·lar
       en: to call off; abort
       es: cancelar
   - word: 一時停止
-    kana: いちじていし
+    kana: いち・じ・てい・し
     translations:
     - ca: estop
       en: stop sign
