--- a/_kanji/0212.md
+++ b/_kanji/0212.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 歩く
-    kana: あるく
+    kana: ある・く
     translations:
     - ca: caminar
       en: to walk
       es: caminar
   - word: 散歩する
-    kana: さんぽする
+    kana: さん・ぽ・する
     translations:
     - ca: passejar
       en: to take a walk
       es: pasear
   - word: 進歩する
-    kana: しんぽする
+    kana: しん・ぽ・する
     translations:
     - ca: avançar
       en: to make progress
       es: progresar
   - word: 横断歩道
-    kana: おうだんほどう
+    kana: おう・だん・ほ・どう
     translations:
     - ca: pas de vianants
       en: crosswalk
