--- a/_kanji/0213.md
+++ b/_kanji/0213.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 走る
-    kana: はしる
+    kana: はし・る
     translations:
     - ca: córrer
       en: to run
       es: correr
   - word: 力走する
-    kana: りきそうする
+    kana: りき・そう・する
     translations:
     - ca: afanyar-se
       en: to rush
