--- a/_kanji/0214.md
+++ b/_kanji/0214.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 起きる
-    kana: おきる
+    kana: お・きる
     translations:
     - ca: llevar-se
       en: to get up
       es: levantar-se
   - word: 早起き
-    kana: はやおき
+    kana: はや・お・き
     translations:
     - ca: matinar
       en: early riser
       es: madrugar
   - word: 起業家
-    kana: きぎょうか
+    kana: き・ぎょう・か
     translations:
     - ca: emprenedor -a
       en: entrepreneur
