--- a/_kanji/0215.md
+++ b/_kanji/0215.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 持つ
-    kana: もつ
+    kana: も・つ
     translations:
     - ca: tenir (a la mà)
       en: to hold (in one's hand)
       es: tener (en la mano)
   - word: 気持ち
-    kana: きもち
+    kana: き・も・ち
     translations:
     - ca: sentiment
       en: feeling
       es: sensación
   - word: 持ち物
-    kana: もちもの
+    kana: も・ち・もの
     translations:
     - ca: pertenencias
       en: belongings
       es: pertinences
   - word: 支持する
-    kana: しじする
+    kana: し・じ・する
     translations:
     - ca: donar suport
       en: to support
