--- a/_kanji/0216.md
+++ b/_kanji/0216.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 待つ
-    kana: まつ
+    kana: ま・つ
     translations:
     - ca: esperar
       en: to wait
       es: esperar
   - word: 待ち合わせ
-    kana: まちあわせ
+    kana: ま・ち・あ・わせ
     translations:
     - ca: cita
       en: appointment
       es: cita
   - word: 招待する
-    kana: しょうたいする
+    kana: しょう・たい・する
     translations:
     - ca: convidar
       en: to invite
       es: invitar
   - word: 期待する
-    kana: きたいする
+    kana: き・たい・する
     translations:
     - ca: esperar (amb anhel)
       en: to hope
