--- a/_kanji/0217.md
+++ b/_kanji/0217.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 借りる
-    kana: かりる
+    kana: か・りる
     translations:
     - ca: demanar de prèstec
       en: to borrow
       es: pedir prestado
   - word: 借金
-    kana: しゃっきん
+    kana: しゃっ・きん
     translations:
     - ca: deute
       en: debt
