--- a/_kanji/0218.md
+++ b/_kanji/0218.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 貸す
-    kana: かす
+    kana: か・す
     translations:
     - ca: prestar
       en: to lend
       es: prestar
   - word: 貸家
-    kana: かしや
+    kana: かし・や
     translations:
     - ca: casa en lloguer
       en: house for rent
       es: casa en alquiler
   - word: 賃貸マンション
-    kana: ちんたいマンション
+    kana: ちん・たい・マンション
     translations:
     - ca: apartament en lloguer
       en: apartament for rent
