--- a/_kanji/0219.md
+++ b/_kanji/0219.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 始める
-    kana: はじめる
+    kana: はじ・める
     translations:
     - ca: començar
       en: to start; to begin
       es: comenzar
   - word: 開始する
-    kana: かいしする
+    kana: かい・し・する
     translations:
     - ca: començar
       en: to start; to begin
       es: comenzar
   - word: 始発
-    kana: しはつ
+    kana: し・はつ
     translations:
     - ca: primer tren
       en: first train
