--- a/_kanji/0220.md
+++ b/_kanji/0220.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 終わる
-    kana: おわる
+    kana: お・わる
     translations:
     - ca: acabar
       en: to end
       es: terminar
   - word: 終電
-    kana: しゅうでん
+    kana: しゅう・でん
     translations:
     - ca: últim tren
       en: last train
       es: último tren
   - word: 最終回
-    kana: さいしゅうかい
+    kana: さい・しゅう・かい
     translations:
     - ca: l'últim episodi
       en: last episode
