--- a/_kanji/0221.md
+++ b/_kanji/0221.md
@@ -23,19 +23,19 @@ compound_words:
       en: house
       es: casa
   - word: 画家
-    kana: がか
+    kana: が・か
     translations:
     - ca: pintor pintora
       en: painter
       es: pintor, ra
   - word: 家内
-    kana: かない
+    kana: か・ない
     translations:
     - ca: esposa
       en: (one's) wife
       es: esposa
   - word: 家庭
-    kana: かてい
+    kana: か・てい
     translations:
     - ca: llar; família
       en: home; family
