--- a/_kanji/0222.md
+++ b/_kanji/0222.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 家族
-    kana: かぞく
+    kana: か・ぞく
     translations:
     - ca: familía
       en: family
       es: familia
   - word: 民族
-    kana: みんぞく
+    kana: みん・ぞく
     translations:
     - ca: grup ètnic
       en: race
       es: grupo étnico
   - word: 水族館
-    kana: すいぞくかん
+    kana: すい・ぞく・かん
     translations:
     - ca: aquarium
       en: aquarium
