--- a/_kanji/0223.md
+++ b/_kanji/0223.md
@@ -23,13 +23,13 @@ compound_words:
       en: I; me
       es: Yo
   - word: 私立大学
-    kana: しりつだいがく
+    kana: し・りつ・だい・がく
     translations:
     - ca: universitat privada
       en: private university
       es: universidad privada
   - word: 私生活
-    kana: しせいかつ
+    kana: し・せい・かつ
     translations:
     - ca: vida privada
       en: (one's) private life
