--- a/_kanji/0224.md
+++ b/_kanji/0224.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 自分
-    kana: じぶん
+    kana: じ・ぶん
     translations:
     - ca: un una mateix -a
       en: oneself
       es: uno, na mismo, ma
   - word: 自動ドア
-    kana: じどうドア
+    kana: じ・どう・ドア
     translations:
     - ca: porta automàtica
       en: automatic door
       es: puerta automática
   - word: 自由
-    kana: じゆう
+    kana: じ・ゆう
     translations:
     - ca: llibertat
       en: freedom
       es: libertad
   - word: 自然
-    kana: しぜん
+    kana: し・ぜん
     translations:
     - ca: natura
       en: nature
