--- a/_kanji/0225.md
+++ b/_kanji/0225.md
@@ -23,19 +23,19 @@ compound_words:
       en: parent; parents
       es: padres
   - word: 母親
-    kana: ははおや
+    kana: はは・おや
     translations:
     - ca: mare
       en: mother
       es: madre
   - word: 親切な
-    kana: しんせつな
+    kana: しん・せつ・な
     translations:
     - ca: amble
       en: kind
       es: amable
   - word: 親しい
-    kana: したしい
+    kana: した・しい
     translations:
     - ca: íntim -a
       en: close
