--- a/_kanji/0226.md
+++ b/_kanji/0226.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 両親
-    kana: りょうしん
+    kana: りょう・しん
     translations:
     - ca: (ambdós) pares
       en: (both) parents
       es: (ambos) padres
   - word: 両方
-    kana: りょうほう
+    kana: りょう・ほう
     translations:
     - ca: ambdós ambdues
       en: both
       es: ambos, bas
   - word: 両手
-    kana: りょうて
+    kana: りょう・て
     translations:
     - ca: ambdues mans
       en: both hands
       es: ambas manos
   - word: 両替え
-    kana: りょうがえ
+    kana: りょう・が・え
     translations:
     - ca: canvi de diners
       en: money exchange
