--- a/_kanji/0227.md
+++ b/_kanji/0227.md
@@ -23,7 +23,7 @@ compound_words:
       en: (one's) elder brother
       es: hermano mayor
   - word: お兄さん
-    kana: おにいさん
+    kana: お・にい・さん
     translations:
     - ca: germà gran
       en: elder brother
