--- a/_kanji/0228.md
+++ b/_kanji/0228.md
@@ -23,7 +23,7 @@ compound_words:
       en: (one's) younger brother
       es: hermano pequeño
   - word: 兄弟
-    kana: きょうだい
+    kana: きょう・だい
     translations:
     - ca: germans
       en: brothers
