--- a/_kanji/0229.md
+++ b/_kanji/0229.md
@@ -23,7 +23,7 @@ compound_words:
       en: (one's) elder sister
       es: hermana mayor
   - word: お姉さん
-    kana: おねえさん
+    kana: お・ねえ・さん
     translations:
     - ca: germana gran
       en: elder sister
