--- a/_kanji/0230.md
+++ b/_kanji/0230.md
@@ -23,13 +23,13 @@ compound_words:
       en: (one's) younger sister
       es: hermana pequeña
   - word: 姉妹
-    kana: しまい
+    kana: し・まい
     translations:
     - ca: germanes
       en: sisters
       es: hermanas
   - word: 姉妹都市
-    kana: しまいとし
+    kana: し・まい・と・し
     translations:
     - ca: ciutat germana
       en: sister city
