--- a/_kanji/0056.md
+++ b/_kanji/0056.md
@@ -23,19 +23,19 @@ compound_words:
       en: east
       es: este
   - word: 東口
-    kana: ひがしぐち
+    kana: ひがし・ぐち
     translations:
     - ca: l'entrada est
       en: the east gate
       es: la entrada este
   - word: 東京
-    kana: とうきょう
+    kana: とう・きょう
     translations:
     - ca: Tòquio
       en: Tokyo
       es: Tokio
   - word: 東洋
-    kana: とうよう
+    kana: とう・よう
     translations:
     - ca: l'Orient
       en: the East
