--- a/_kanji/0158.md
+++ b/_kanji/0158.md
@@ -26,7 +26,7 @@ compound_words:
     kana: りょ・かん
     translations:
     - ca: hotel d'estil japonès
-      en: Japanese-style hotel
+      en: japanese-style hotel
       es: hotel de estilo japonés
   - word: 旅
     kana: たび
