--- a/_kanji/0244.md
+++ b/_kanji/0244.md
@@ -28,7 +28,7 @@ compound_words:
     - ca: carn de vaca
       en: beef
       es: carne de vaca
-  - word: 肉や
+  - word: 肉屋
     kana: にく・や
     translations:
     - ca: carnisseria
