--- a/_kanji/0267.md
+++ b/_kanji/0267.md
@@ -32,7 +32,7 @@ compound_words:
     kana: まちあいしつ
     translations:
     - ca: sala d'espera
-      en: waitinf room
+      en: waiting room
       es: sala de espera
   - word: 事務室
     kana: じむしつ
