--- a/_kanji/0236.md
+++ b/_kanji/0236.md
@@ -6,7 +6,7 @@ number: 236
 kanji: 品
 strokes: 9
 
-kunyomi: した
+kunyomi: しな
 onyomi: ヒン
 
 meaning:
@@ -17,7 +17,7 @@ meaning:
 
 compound_words:
   - word: 品物
-    kana: した・もの
+    kana: しな・もの
     translations:
     - ca: producte; mercaderia
       en: goods
