--- a/_kanji/0064.md
+++ b/_kanji/0064.md
@@ -11,9 +11,9 @@ onyomi:
 
 meaning:
   translations:
-    - ca: かい (shellfish)
+    - ca: かい (marisc)
       en: かい (shellfish)
-      es: かい (shellfish)
+      es: かい (marisco)
 
 compound_words:
   - word: 貝
