--- a/_kanji/0077.md
+++ b/_kanji/0077.md
@@ -11,9 +11,9 @@ onyomi: チョウ
 
 meaning:
   translations:
-    - ca: ながい (llarg)<br>一番上の人 (cap)
-      en: ながい (long)<br>一番上の人 (chief)
-      es: ながい (largo)<br>一番上の人 (jefe)
+    - ca: ながい (llarg)<br>うちばんうえのひと (cap)
+      en: ながい (long)<br>うちばんうえのひと (chief)
+      es: ながい (largo)<br>うちばんうえのひと (jefe)
 
 compound_words:
   - word: 長い
