--- a/_kanji/0082.md
+++ b/_kanji/0082.md
@@ -12,7 +12,7 @@ onyomi: ライ
 meaning:
   translations:
     - ca: くる (venir)
-      en: くる (to come)
+      en: くる (come)
       es: くる (venir)
 
 compound_words:
