--- a/_kanji/0083.md
+++ b/_kanji/0083.md
@@ -12,7 +12,7 @@ onyomi: ショク
 meaning:
   translations:
     - ca: たべる (menjar)
-      en: たべる (to eat)
+      en: たべる (eat)
       es: たべる (comer)
 
 compound_words:
