--- a/_kanji/0084.md
+++ b/_kanji/0084.md
@@ -12,7 +12,7 @@ onyomi: ケン
 meaning:
   translations:
     - ca: みる (mirar)
-      en: みる (to see)
+      en: みる (see)
       es: みる (mirar)
 
 compound_words:
