--- a/_kanji/0085.md
+++ b/_kanji/0085.md
@@ -12,7 +12,7 @@ onyomi: ニュウ
 meaning:
   translations:
     - ca: はいる (entrar)<br>いれる (posar a dins)
-      en: はいる (to enter)<br>いれる (put in)
+      en: はいる (enter)<br>いれる (put in)
       es: はいる (entrar)<br>いれる (meter en)
 
 compound_words:
