--- a/_kanji/0086.md
+++ b/_kanji/0086.md
@@ -12,7 +12,7 @@ onyomi: シュツ／シュッー
 meaning:
   translations:
     - ca: でる (sortir)<br>だす (treure)
-      en: でる (to go out)<br>だす (take out)
+      en: でる (go out)<br>だす (take out)
       es: でる (salir)<br>だす (sacar)
 
 compound_words:
