--- a/_kanji/0087.md
+++ b/_kanji/0087.md
@@ -12,7 +12,7 @@ onyomi: リツ／リッー
 meaning:
   translations:
     - ca: たつ (posar-se dret)
-      en: たつ (to stand)
+      en: たつ (stand)
       es: たつ (levantarse)
 
 compound_words:
