--- a/_kanji/0088.md
+++ b/_kanji/0088.md
@@ -12,7 +12,7 @@ onyomi: ショ
 meaning:
   translations:
     - ca: かく (escriure)<br>ほん (llibre)
-      en: かく (to write)<br>ほん (book)
+      en: かく (write)<br>ほん (book)
       es: かく (escribir)<br>ほん (libro)
 
 compound_words:
