--- a/_kanji/0089.md
+++ b/_kanji/0089.md
@@ -12,7 +12,7 @@ onyomi: ゲン<br>ゴン
 meaning:
   translations:
     - ca: いう (dir)
-      en: いう (to say)
+      en: いう (say)
       es: いう (decir)
 
 compound_words:
