--- a/_kanji/0090.md
+++ b/_kanji/0090.md
@@ -12,7 +12,7 @@ onyomi: イン
 meaning:
   translations:
     - ca: のむ (beure)
-      en: のむ (to drink)
+      en: のむ (drink)
       es: のむ (beber)
 
 compound_words:
