--- a/_kanji/0091.md
+++ b/_kanji/0091.md
@@ -12,7 +12,7 @@ onyomi: ワ
 meaning:
   translations:
     - ca: はなす (parlar)
-      en: はなす (to speak)
+      en: はなす (speak)
       es: はなす (hablar)
 
 compound_words:
