--- a/_kanji/0092.md
+++ b/_kanji/0092.md
@@ -12,7 +12,7 @@ onyomi: ドク
 meaning:
   translations:
     - ca: よむ (llegir)
-      en: よむ (to read)
+      en: よむ (read)
       es: よむ (leer)
 
 compound_words:
