--- a/_kanji/0095.md
+++ b/_kanji/0095.md
@@ -12,7 +12,7 @@ onyomi: ブン
 meaning:
   translations:
     - ca: きく (escoltar)
-      en: きく (to listen)
+      en: きく (listen)
       es: きく (escuchar)
 
 compound_words:
