--- a/_kanji/0096.md
+++ b/_kanji/0096.md
@@ -12,7 +12,7 @@ onyomi: バイ
 meaning:
   translations:
     - ca: かう (comprar)
-      en: かう (to buy)
+      en: かう (buy)
       es: かう (comprar)
 
 compound_words:
