--- a/_kanji/0097.md
+++ b/_kanji/0097.md
@@ -12,7 +12,7 @@ onyomi: キュウ
 meaning:
   translations:
     - ca: やすむ (descansar)
-      en: やすむ (to rest)
+      en: やすむ (rest)
       es: やすむ (descansar)
 
 compound_words:
