--- a/_kanji/0100.md
+++ b/_kanji/0100.md
@@ -11,9 +11,9 @@ onyomi: ドウ
 
 meaning:
   translations:
-    - ca: みち (carrer, carretera)
-      en: みち (street, road)
-      es: みち (calle, calzada)
+    - ca: みち (carrer; carretera)
+      en: みち (street; road)
+      es: みち (calle; calzada)
 
 compound_words:
   - word: 道
