--- a/_kanji/0102.md
+++ b/_kanji/0102.md
@@ -11,7 +11,7 @@ onyomi: カイ
 meaning:
   translations:
     - ca: あう (trobar-se amb)
-      en: あう (to meet)
+      en: あう (meet)
       es: あう (encontrarse con)
 
 compound_words:
