--- a/_kanji/0114.md
+++ b/_kanji/0114.md
@@ -11,9 +11,9 @@ onyomi: ト<br>ツ
 
 meaning:
   translations:
-    - ca: みやこ (capital)
-      en: みやこ (capital)
-      es: みやこ (capital)
+    - ca: みやこ (metropolis)
+      en: みやこ (metropolis)
+      es: みやこ (metropolis)
 
 compound_words:
   - word: 東京都
