--- a/_kanji/0146.md
+++ b/_kanji/0146.md
@@ -11,9 +11,9 @@ onyomi: セイ<br>ショウ
 
 meaning:
   translations:
-    - ca: ただしい (correcte)
-      en: ただしい (correct)
-      es: ただしい (correcto)
+    - ca: ただしい (correcte)<br>ただしい (bé)
+      en: ただしい (correct)<br>ただしい (right)
+      es: ただしい (correcto)<br>ただしい (bien)
 
 compound_words:
   - word: 正しい
