--- a/_kanji/0171.md
+++ b/_kanji/0171.md
@@ -12,7 +12,7 @@ onyomi: リン
 meaning:
   translations:
     - ca: はやし (bosc)
-      en: はやし (woods)
+      en: はやし (wood)
       es: はやし (bosque)
 
 compound_words:
