--- a/_kanji/0207.md
+++ b/_kanji/0207.md
@@ -12,7 +12,7 @@ onyomi: ケイ
 meaning:
   translations:
     - ca: はかる (mesurar)
-      en: はかる (to measure)
+      en: はかる (measure)
       es: はかる (medir)
 
 compound_words:
