--- a/_kanji/0208.md
+++ b/_kanji/0208.md
@@ -12,7 +12,7 @@ onyomi: ヨウ
 meaning:
   translations:
     - ca: かがやく (brillar)
-      en: かがやく (to shine)
+      en: かがやく (shine)
       es: かがやく (brillar)
 
 compound_words:
