--- a/_kanji/0211.md
+++ b/_kanji/0211.md
@@ -12,7 +12,7 @@ onyomi: シ
 meaning:
   translations:
     - ca: とまる (aturar)
-      en: とまる (to stop)
+      en: とまる (stop)
       es: とまる (detener)
 
 compound_words:
