--- a/_kanji/0212.md
+++ b/_kanji/0212.md
@@ -12,7 +12,7 @@ onyomi: ホ／ポ
 meaning:
   translations:
     - ca: あるく (caminar)
-      en: あるく (to walk)
+      en: あるく (walk)
       es: あるく (caminar)
 
 compound_words:
