--- a/_kanji/0213.md
+++ b/_kanji/0213.md
@@ -12,7 +12,7 @@ onyomi: ソウ
 meaning:
   translations:
     - ca: はしる (córrer)
-      en: はしる (to run)
+      en: はしる (run)
       es: はしる (correr)
 
 compound_words:
