--- a/_kanji/0214.md
+++ b/_kanji/0214.md
@@ -12,7 +12,7 @@ onyomi: キ
 meaning:
   translations:
     - ca: おきる (llevar-se)
-      en: おきる (to get up)
+      en: おきる (get up)
       es: おきる (levantar-se)
 
 compound_words:
