--- a/_kanji/0215.md
+++ b/_kanji/0215.md
@@ -12,7 +12,7 @@ onyomi: ジ
 meaning:
   translations:
     - ca: もつ (tenir)
-      en: もつ (to have)
+      en: もつ (have)
       es: もつ (tener)
 
 compound_words:
