--- a/_kanji/0216.md
+++ b/_kanji/0216.md
@@ -12,7 +12,7 @@ onyomi: タイ
 meaning:
   translations:
     - ca: まつ (esperar)
-      en: まつ (to wait)
+      en: まつ (wait)
       es: まつ (esperar)
 
 compound_words:
