--- a/_kanji/0217.md
+++ b/_kanji/0217.md
@@ -12,7 +12,7 @@ onyomi: シャク<br>シャッー
 meaning:
   translations:
     - ca: かりる (demanar de prèstec)
-      en: かりる (to borrow)
+      en: かりる (borrow)
       es: かりる (pedir prestado)
 
 compound_words:
