--- a/_kanji/0218.md
+++ b/_kanji/0218.md
@@ -12,7 +12,7 @@ onyomi: タイ
 meaning:
   translations:
     - ca: かす (prestar)
-      en: かす (to lend)
+      en: かす (lend)
       es: かす (prestar)
 
 compound_words:
