--- a/_kanji/0219.md
+++ b/_kanji/0219.md
@@ -12,7 +12,7 @@ onyomi: シ
 meaning:
   translations:
     - ca: はじまる (començar)
-      en: はじまる (to begin)
+      en: はじまる (begin)
       es: はじまる (comenzar)
 
 compound_words:
