--- a/_kanji/0220.md
+++ b/_kanji/0220.md
@@ -12,7 +12,7 @@ onyomi: シュウ
 meaning:
   translations:
     - ca: おわる (acabar)
-      en: おわる (to end)
+      en: おわる (end)
       es: おわる (terminar)
 
 compound_words:
