--- a/_kanji/0225.md
+++ b/_kanji/0225.md
@@ -12,7 +12,7 @@ onyomi: シン
 meaning:
   translations:
     - ca: おや (pares)<br>したしい (íntim)
-      en: おや (parents)<br>したしい (close)
+      en: おや (parent)<br>したしい (close)
       es: おや (padres)<br>したしい (íntimo)
 
 compound_words:
