--- a/_kanji/0232.md
+++ b/_kanji/0232.md
@@ -12,7 +12,7 @@ onyomi: カイ
 meaning:
   translations:
     - ca: まらう (girar)
-      en: まらう (to turn)
+      en: まらう (turn)
       es: まらう (girar)
 
 compound_words:
