--- a/_kanji/0236.md
+++ b/_kanji/0236.md
@@ -11,9 +11,9 @@ onyomi: ヒン
 
 meaning:
   translations:
-    - ca: した (béns)
-      en: した (goods)
-      es: した (bienes)
+    - ca: しな (béns)
+      en: しな (goods)
+      es: しな (bienes)
 
 compound_words:
   - word: 品物
