--- a/_kanji/0242.md
+++ b/_kanji/0242.md
@@ -12,7 +12,7 @@ onyomi: リョウ
 meaning:
   translations:
     - ca: はかる (mesurar)<br>ざいりょう (materials)
-      en: はかる (to measure)<br>ざいりょう (materials)
+      en: はかる (measure)<br>ざいりょう (materials)
       es: はかる (medir)<br>ざいりょう (materiales)
 
 compound_words:
