--- a/_kanji/0251.md
+++ b/_kanji/0251.md
@@ -12,7 +12,7 @@ onyomi: だい<br>たい
 meaning:
   translations:
     - ca: かわる (reemplaçar)<br>だい (generació)
-      en: かわる (to replace)<br>だい (generation)
+      en: かわる (replace)<br>だい (generation)
       es: かわる (reemplazar)<br>だい (generació)
 
 compound_words:
