--- a/_kanji/0252.md
+++ b/_kanji/0252.md
@@ -12,7 +12,7 @@ onyomi: シ
 meaning:
   translations:
     - ca: つかう (emprar)
-      en: つかう (to use)
+      en: つかう (use)
       es: つかう (utilizar)
 
 compound_words:
