--- a/_kanji/0253.md
+++ b/_kanji/0253.md
@@ -12,7 +12,7 @@ onyomi: サク／サッ<br>サ
 meaning:
   translations:
     - ca: つくる (fer)
-      en: つくる (to make)
+      en: つくる (make)
       es: つくる (hacer)
 
 compound_words:
