--- a/_kanji/0254.md
+++ b/_kanji/0254.md
@@ -12,7 +12,7 @@ onyomi: カ<br>ケ
 meaning:
   translations:
     - ca: かわる (convertir en)
-      en: かわる (to turn into)
+      en: かわる (turn into)
       es: かわる (convertir en)
 
 compound_words:
