--- a/_kanji/0255.md
+++ b/_kanji/0255.md
@@ -12,7 +12,7 @@ onyomi: シン
 meaning:
   translations:
     - ca: しんじる (creure)
-      en: しんじる (to believe)
+      en: しんじる (believe)
       es: しんじる (creer)
 
 compound_words:
