--- a/_kanji/0256.md
+++ b/_kanji/0256.md
@@ -12,7 +12,7 @@ onyomi: シン
 meaning:
   translations:
     - ca: すすむ (avançar)
-      en: すすむ (to advance)
+      en: すすむ (advance)
       es: すすむ (avanzar)
 
 compound_words:
