--- a/_kanji/0257.md
+++ b/_kanji/0257.md
@@ -12,7 +12,7 @@ onyomi: ソウ
 meaning:
   translations:
     - ca: おくる (enviar)
-      en: おくる (to send)
+      en: おくる (send)
       es: おくる (enviar)
 
 compound_words:
