--- a/_kanji/0258.md
+++ b/_kanji/0258.md
@@ -12,7 +12,7 @@ onyomi: ヘン
 meaning:
   translations:
     - ca: かえす (retornar)
-      en: かえす (to return)
+      en: かえす (return)
       es: かえす (retornar)
 
 compound_words:
