--- a/_kanji/0259.md
+++ b/_kanji/0259.md
@@ -12,7 +12,7 @@ onyomi: セン
 meaning:
   translations:
     - ca: あらう (rentar)
-      en: あらう (to wash)
+      en: あらう (wash)
       es: あらう (lavar)
 
 compound_words:
