--- a/_kanji/0262.md
+++ b/_kanji/0262.md
@@ -12,7 +12,7 @@ onyomi: ケン
 meaning:
   translations:
     - ca: たてる (construir)
-      en: たてる (to build)
+      en: たてる (build)
       es: たてる (construir)
 
 compound_words:
