--- a/_kanji/0260.md
+++ b/_kanji/0260.md
@@ -12,7 +12,7 @@ onyomi: チュウ
 meaning:
   translations:
     - ca: そそぐ (vessar a)
-      en: そそぐ (to pour into)
+      en: そそぐ (pour)
       es: そそぐ (verter en)
 
 compound_words:
